@@ -62,6 +62,10 @@
   {
     margin-top: 2em;
   }
+  body
+  {
+    padding-bottom: 20em;
+  }
 }
 @media print {
   table.navigation {
