@@ -1,5 +1,11 @@
 2007-08-21  Stefan Kost  <ensonic@users.sf.net>
 
+	* gtkdoc-mkdb.in:
+	* style.css:
+	  Add divider and empty space at the bottom. Mostly fixes #448879.
+
+2007-08-21  Stefan Kost  <ensonic@users.sf.net>
+
 	* gtk-doc.make:
 	* gtk-doc.notmpl.make:
 	  Make use of rebase if possible. Fixes #465920
